[tool.poetry]
name = "scene-community-actions"
version = "0.0.0"
description = ""
authors = ["Howard Cox <dev.anubis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
